@@ -507,7 +507,8 @@ public class ListOf<T extends SBase> extends AbstractSBase implements List<T> {
 	 *         criterion.
 	 */
 	public ListOf<T> filterList(Filter f) {
-		ListOf<T> list = new ListOf<T>(getLevel(), getVersion());
+		ListOf<T> list = ListOf.initListOf(getParentSBMLObject(), 
+				new ListOf<T>(getLevel(), getVersion()), getSBaseListType());
 		for (T sbase : this) {
 			if (f.accepts(sbase)) {
 				list.add(sbase);
